...
  @override
  Widget build(BuildContext context) {
    return DropdownButtonHideUnderline(
      child: ButtonTheme(
        alignedDropdown: true,
        child: DropdownButton<Widget>(
          key: const Key('dropdown'),
          borderRadius: const BorderRadius.all(Radius.circular(8)),
          value: null,
          itemHeight: null,
          elevation: 3,
          iconSize: 0,
          style: Theme.of(context).textTheme.body,
...
