...
            alignment: Alignment.topRight,
            children: [
              SafeArea(
                child: BlocBuilder<TodosBloc, TodosState>(
                  builder: (context, state) {
                    return CustomScrollView(
                      key: const Key('custom_scroll_view'),
                      controller: scrollController,
                      slivers: [
                        const _TodosAppBar(),
                        state.maybeWhen(
                          dataFetched: todoList,
                          removed: todoListWithActionOnItem,
...
